# buzzer_app

./: .gitignore
core/: Cargo.toml
core/src/: adapter.rs  game.rs  lib.rs
server/: Cargo.toml
server/src/: adapter.rs  auth.rs  dtos.rs  errors.rs  main.rs  ratelimit.rs  socket.rs  state.rs
server/src/state/: app_state.rs  mod.rs
server/src/state/room_state/: commands.rs  lifecycle.rs  membership.rs  messaging.rs  mod.rs
server/src/utils/: time.rs
web_client/: package-lock.json  package.json  vite.config.ts
web_client/src/: App.css  App.tsx  assets.d.ts  index.css
web_client/src/hooks/: useRoomMutations.ts  useSoundBoard.ts
web_client/src/lib/: api.ts  queryKeys.ts  storage.ts
