[package]
name = "buzzer_game_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
jsonwebtoken = "9"
dashmap = "6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

game_logic = { path = "../game_logic" }
