[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "json"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
dashmap = "6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower_governor = "0.8"
governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

core = { path = "../core" }
